# spark-smi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  spark-smi.py
spark_smi/: __main__.py  _core.py
